removed h2,added posgresql

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,8 @@
-spring.h2.console.enabled=true
-spring.h2.console.path=/console
+#PostgreSQL configuration
+spring.datasource.url= jdbc:postgresql://localhost:5432/forms
+spring.datasource.username=postgres
+spring.datasource.password=
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+#create tables and drop on exit
+spring.jpa.hibernate.ddl-auto=create-drop
